Correct spacing

--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -2,8 +2,12 @@
     display: flex;
     width: 75%;
     margin: auto;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
     align-items: flex-end;
     justify-content: space-between;
+
+    padding: 30px 30px 30px 95px;
 
     background: linear-gradient(116.52deg, rgba(255, 255, 255, 0.22) -0.3%, rgba(255, 255, 255, 0.2) 81.34%);
     backdrop-filter: blur(20px);
