--- a/css/components/renaissance-img.css
+++ b/css/components/renaissance-img.css
@@ -1,4 +1,3 @@
 .renaissance-img{
     height: 85vh;
-    width: 40vw;
 }
